# parameter-golf

./: .gitignore  README.md  pyproject.toml  run.py  train_gpt_mlx.py
.runner/: README.md  modal_app.py  modal_runner.py
.runner/modal/: pyproject.toml
data/: cached_challenge_fineweb.py
instructions/: base_program.md  default_task.md  goal_and_constraints.md  program.md
records/track_non_record_16mb/2026-04-15_LegalTTT_MuonPlus_QKGain4/: README.md  requirements.txt  submission.json  train_gpt.py
workspace/: exp.md  prepare.py  train_gpt.py
