[project]
name = "autoresearch-parameter-golf"
version = "0.1.0"
description = "Modal runtime dependencies for Parameter Golf (CUDA training)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "huggingface-hub>=0.30.0",
    "numpy>=2.2.0",
    "sentencepiece>=0.2.0",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
